# phastSim

./: .gitignore  README.md  compareSimulators.py  efficientSimuSARS2.py  phastSim.py  random_tree.py  sars-cov-2_simulation_output.fasta  sars-cov-2_simulation_output.info  sars-cov-2_simulation_output.phy  sars-cov-2_simulation_output.tree  sars-cov-2_simulation_output.txt  setup.cfg  setup.py
example/: sars-cov-2_simulation_output.fasta  sars-cov-2_simulation_output.info  sars-cov-2_simulation_output.phy  sars-cov-2_simulation_output.tree  sars-cov-2_simulation_output.txt
phastSim/: parsimony.proto  parsimony_pb2.py  phastSim.py
phastSim/example/: example_sarscov2_tree.newick  sars-cov-2_simulation_output.fasta  sars-cov-2_simulation_output.info  sars-cov-2_simulation_output.phy  sars-cov-2_simulation_output.tree  sars-cov-2_simulation_output.txt
scripts/: bacteria_experiment.sh  codon_experiment.sh  compareSimulators.py  createPlots.py  fast_edit.py  general_experiment.sh  indel_data.txt  indel_experiment.sh  random_tree.py  runPyvolve.py  scale_experiment.sh  testing_phastSim_indels.py
tests/: regenerate_tree.py  regenerate_tree_cluster.py  regenerate_tree_cluster_script.sh  regenerate_tree_cluster_script_2.sh  regenerate_tree_cluster_script_3.sh  test_indel_writer.py  test_simple_functions.py  vanilla_test.py
