[metadata]
name = phastSim
version = 0.0.1
url = https://github.com/NicolaDM/phastSim
author = Nicola De Maio
author_email = author@example.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = Fast sequence evolution simulation for SARS-CoV-2 phylogenies and other genomic epidemiological datasets
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = phastSim
python_requires = >=3.6
scripts = 
	bin/phastSimulate
install_requires = 
	numpy
	ete3
	Biopython
	argparse
	six

